--- a/styles/modal_add.css
+++ b/styles/modal_add.css
@@ -126,3 +126,9 @@
     border: none;
     background-image: url('../assets/Vector.png');
 }
+
+.error_add_modal {
+    font-size: 20px;
+    color: red;
+    margin-bottom: 15px;
+}
